# ghr

./: Cargo.toml  Dockerfile  LICENCE.md  README.md  default.nix  flake.nix  ghr.example.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: nix.yml  rust.yml
resources/formula/: ghr.rb.mustache
resources/scoop/: ghr.json.mustache
resources/shell/: ghr-completion.bash  ghr.bash  ghr.fish
resources/shell/bash/: ghr-completion.bash  ghr.bash
resources/shell/fish/: ghr-completion.fish  ghr.fish
src/: application.rs  config.rs  console.rs  main.rs  path.rs  profile.rs  repository.rs  root.rs  rule.rs  sync.rs  url.rs
src/cmd/: add.rs  browse.rs  cd.rs  clone.rs  delete.rs  init.rs  list.rs  mod.rs  open.rs  path.rs  search.rs  shell.rs  version.rs
src/cmd/profile/: apply.rs  list.rs  mod.rs  show.rs
src/cmd/sync/: dump.rs  mod.rs  restore.rs
src/git/: branch.rs  clone.rs  config.rs  exclude.rs  fetch.rs  mod.rs  remote.rs
src/git/strategy/: cli.rs  git2.rs  mod.rs
src/platform/: github.rs  mod.rs
