[package]
name = "ghr"
description = "Yet another repository management with auto-attaching profiles."
version = "0.4.5"
license = "MIT"
homepage = "https://github.com/siketyan/ghr"
repository = "https://github.com/siketyan/ghr.git"
readme = "README.md"
rust-version = "1.85.0"
edition = "2024"
authors = [
    "Naoki Ikeguchi <me@s6n.jp>",
]

[dependencies]
anyhow = "1.0"
async-hofs = "0.1.1"
async-trait = "0.1.88"
build-info = "0.0.40"
clap = { version = "4.5", features = ["derive"] }
console = "0.15.11"
dialoguer = "0.11.0"
dirs = "6.0"
git2 = "0.20.2"
itertools = "0.14.0"
indicatif = "0.17.11"
nucleo-matcher = "0.3.1"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_regex = "1.1"
serde_with = "3.12"
tokio = { version = "1.45", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.17"
toml = "0.8.23"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
url = "2.5"
walkdir = "2.5"

gh-config = { version = "0.5.1", optional = true }
octocrab = { version = "0.44.1", optional = true }

[target.'cfg(windows)'.dependencies.windows]
version = "0.60.0"
features = [
    "Win32_UI_Shell",
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
]

[build-dependencies]
build-info-build = "0.0.40"

[features]
default = ["github"]
vendored = ["git2/vendored-libgit2", "git2/vendored-openssl"]
github = ["gh-config", "octocrab"]
