[package]
name = "ghr"
description = "Yet another repository management with auto-attaching profiles."
version = "0.4.5"
license = "MIT"
homepage = "https://github.com/siketyan/ghr"
repository = "https://github.com/siketyan/ghr.git"
readme = "README.md"
rust-version = "1.85.0"
edition = "2024"
authors = [
    "Naoki Ikeguchi <me@s6n.jp>",
]

[dependencies]
anyhow = "1.0"
async-hofs = "0.1.1"
async-trait = "0.1.89"
build-info = "0.0.41"
clap = { version = "4.5", features = ["derive"] }
console = "0.16.2"
dialoguer = "0.12.0"
dirs = "6.0"
git2 = "0.20.3"
itertools = "0.14.0"
indicatif = "0.18.3"
nucleo-matcher = "0.3.1"
regex = "1.12"
serde = { version = "1.0", features = ["derive"] }
serde_regex = "1.1"
serde_with = "3.16"
tokio = { version = "1.49", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.17"
toml = "0.9.10"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
url = "2.5"
walkdir = "2.5"

gh-config = { version = "0.5.1", optional = true }
octocrab = { version = "0.47.1", optional = true }

[target.'cfg(windows)'.dependencies.windows]
version = "0.60.0"
features = [
    "Win32_UI_Shell",
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
]

[build-dependencies]
build-info-build = "0.0.41"

[features]
default = ["github"]
vendored = ["git2/vendored-libgit2", "git2/vendored-openssl"]
github = ["gh-config", "octocrab"]
